packages/cjs-to-esm/test/snapshots/package-corpus/core-js/stable/error/is-error.js
import parent from "../../es/error/is-error";
const _cjs_default = parent;
export default _cjs_default;
